2012-01-30  Guillaume Lazzara  <z@lrde.epita.fr>

	* build-aux/texi2dvi: Fix Dash incompatibility.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve main documentation.

	* doc/Makefile.am: Update dependencies.

	* doc/about.dox,
	* doc/doxygen.css,
	* doc/license.dox,
	* doc/license_commercial.dox,
	* doc/licensing.dox,
	* doc/mainpage.dox: Improve titles and presentation.

	* doc/supported_platforms.dox: New.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix documentation.

	* doc/Doxyfile.in,
	* doc/Makefile.am: Fix path to data and fix cleanup.

2011-12-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Add more missing files in EXTRA_DIST.

2011-12-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Add missing files in EXTRA_DIST.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix dependencies in Makefiles.

	* Makefile.am,
	* doc/Makefile.am: Here.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Path to Olena logo.

	* doc/logo.jpg: Move...
	* doc/images/logo.jpg: ... here.

	* doc/Doxyfile.in,
	* milena/doc/Doxyfile.in,
	* scribo/doc/Doxyfile.in: Fix path.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix titles.

	* doc/contributors.dox,
	* doc/license.dox,
	* doc/license_commercial.dox,
	* doc/mainpage.dox: Here.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Add a description about Olena.

	* doc/Doxyfile.in: Add IMAGE_PATH entry.

	* doc/Makefile.am: Add image dependency.

	* doc/about.dox: New.

	* doc/doc.bib: New reference.

	* doc/images/olena_layers.png,
	* doc/images/olena_layers.svg: New.

	* doc/mainpage.dox: Rename section.

2011-10-28  Guillaume Lazzara  <z@lrde.epita.fr>

	Add more content in general documentation.

	* doc/Makefile.am: New dependencies.

	* doc/license_commercial.dox,
	* doc/mainpage.dox,
	* doc/modules_list.dox: More content.

	* doc/get_sources.dox,
	* doc/online_resources.dox: New.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Add details about licensing.
