@@ -1,5 +1,6 @@
 <hr class="footer"/><address class="footer"><small>
-<span style="position:absolute;text-align:left;">Copyright (C) 2011 EPITA Research and Development Laboratory (LRDE)</span><span align='right'>Olena 2.0</span>
+<div style="position:absolute;text-align:left;">Copyright (C) 2011 EPITA Research and Development Laboratory (LRDE)</div>
+<div align='right'>Olena 2.0</div>
 </small></address>
 </body>
 </html>
