@@ -17,7 +17,7 @@ $mathjax
  <tbody>
  <tr style="height: 56px;">
   <!--BEGIN PROJECT_LOGO-->
-  <td id="projectlogo"><a href="$relpath$index.html"><img alt="Logo" src="$relpath$$projectlogo"></a></td>
+  <td id="projectlogo"><a href="@relcommondocpath@$relpath$index.html"><img alt="Logo" src="$relpath$$projectlogo"></a></td>
   <!--END PROJECT_LOGO-->
   <!--BEGIN PROJECT_NAME-->
   <td style="padding-left: 0.5em;">
