@@ -1,10 +1,9 @@
-/** \mainpage Documentation of Olena
+/** \mainpage Olena Reference Documentation
+
 
     <center>
-    <h1>Olena Reference Documentation</h1>
 
     <table class="doxtable itable">
-
     <tr>
       <th>General Presentation</th>
       <th>Modules</th>
@@ -20,8 +19,8 @@
       </td>
       <td>
         \li \ref moduleslist
-    	\li <a class="el" doxygen="milena.tag:../../../milena/doc/user-refman/html" href="../../../milena/doc/user-refman/html/index.html">Milena</a>
-    	\li <a class="el" doxygen="scribo.tag:../../../scribo/doc/user-refman/html" href="../../../scribo/doc/user-refman/html/index.html">Scribo</a>
+    	\li <a class="el" href="../../milena/user-refman/html/index.html">Milena</a>
+    	\li <a class="el" href="../../scribo/user-refman/html/index.html">Scribo</a>
     	\li Swilena
       </td>
       <td>
@@ -54,7 +53,6 @@
     	\li Olena Powered Programs
       </td>
     </tr>
-
     </table>
 
     </center>
